# hyperscan-cpp-wrapper

./: CMakeLists.txt  README.md  hs_wrapper.cpp  hs_wrapper.h  main.t.cpp  signals
.github/workflows/: cmake.yml
